# compare-seg-models

./: .gitignore  CITATION.cff  README.md  README_config.md  README_seg-nets_package.md  environment.yml  learn_curve_keras.py  pyproject.toml  setup.py  spec-file.txt  summary_keras.py  template_config.ini
data/experiment_configs/: config_20180407_koumura_bird1_GPU0.ini  config_20180408_koumura_bird2_GPU1.ini  config_20180411_koumura_bird1_GPU0.ini  config_20180414_koumura_bird1_GPU0.ini  config_20180422_koumura_bird1_GPU0.ini  config_20181119_koumura_bird1_GPU0.ini  config_20181121_koumura_bird2_GPU1.ini  (+4 more)
experiment_configs/: config_02282018_koumura_bird0_GPU1.ini  config_20180406_koumura_bird0_GPU1.ini  config_20180407_koumura_bird1_GPU0.ini  config_20180408_koumura_bird2_GPU1.ini  config_20180411_koumura_bird2_GPU1.ini  config_20181119_koumura_bird1_GPU0.ini  config_20181119_koumura_bird1_GPU1.ini  config_20181121_koumura_bird2_GPU1.ini  config_20181122_koumura_bird1_GPU0.ini  config_20181123_koumura_bird1_GPU0.ini  config_20181123_koumura_bird2_GPU1.ini  config_20181124_koumura_bird2_GPU0.ini  config_20181124_koumura_bird3_GPU1.ini  config_20181124_koumura_bird4_GPUcrab.ini
experiment_notebooks/: history-viz.ipynb  initial-experiment.ipynb  results-2018-04-12.ipynb  results-2018-11-25.ipynb
network_configs/: config_20180406_1234  config_20181119_2242  config_20181122_1055  config_20181123_1516
seg_nets/: __init__.py  base_model.py  cnn_bilstm_model.py  data_utils.py  ed_tcn_model.py  encoder_decoder_model.py  keras_models.py  tf_utils.py
(+23 files in other folders)
