[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "seg_nets"
version = "0.1.0"
description= "comparison of deep neural network models for segmenting vocalizations"
authors = [{name = "David Nicholson", email = "nickledave@users.noreply.github.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]

[project.urls]
Home = "https://github.com/NickleDave/seg_nets"

dependencies = [
    "matplotlib >=3.3.3",
    "numpy >=1.18.1",
    "scipy >=1.4.1",
    "tensorflow >=2.9.1",
]
